fixed hover animation on about page.
the ufo img was getting cut off during the hover animation.

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -597,8 +597,8 @@ input[type=tel] {
               transform: translate(0, 20px);
     }
     50% {
-      -webkit-transform: translate(0, 50px);
-              transform: translate(0, 50px);
+      -webkit-transform: translate(0, 30px);
+              transform: translate(0, 30px);
     }
     100% {
       -webkit-transform: translate(0,20px);
