--- a/css/styles.css
+++ b/css/styles.css
@@ -476,7 +476,7 @@ input[type=tel] {
       transform: translate(0, 20px);
     }
     50% {
-      transform: translate(0, 50px);
+      transform: translate(0, 30px);
     }
     100% {
       transform: translate(0,20px);
